# DiscordCoreAPI

./: .clang-format  .gitattributes  .gitignore  ApplicationCommandEntities.hpp  ApplicationCommandStuff.hpp  CMakeLists.txt  CMakePresets.json  ChannelEntities.hpp  ChannelStuff.hpp  DataParsingFunctions.hpp  DatabaseEntities.hpp  DatabaseStuff.hpp  DecodingClass.hpp  DecodingStuff.hpp  DemuxingStuff.hpp  DiscordCoreClient.hpp  DiscordCoreClient01.hpp  DiscordCoreClient02.hpp  DiscordCoreClientBase.hpp  Documentation-Examples.md  EncodingClass.hpp  EncodingStuff.hpp  EventHandler.hpp  EventHandlerClass.hpp  EventManager.hpp  EventStuff01.hpp  EventStuff02.hpp  EventTypes.hpp  FFMPEGStuff.hpp  FoundationEntities.hpp  GuildEntities.hpp  GuildMemberEntities.hpp  GuildMemberStuff.hpp  GuildStuff.hpp  GuildStuff01.hpp  GuildStuff02.hpp  Http.hpp  HttpClass.hpp  HttpStuff.hpp  Https.cpp  (+52 more)
.cicircle/: Documentation.yml  config.yml
.circleci/: config.yml
.github/: FUNDING.yml
.github/Raw-Files/: Portfile-The-Second.cmake  portfile-first-half-new.cmake  portfile-first-half.cmake  portfile-second-half.cmake
.github/workflows/: Build-Binaries.yml  Build-DiscordCoreAPI-Linux-Main.yml  Build-DiscordCoreAPI-Linux-Transferring-Dev.yml  Build-DiscordCoreAPI-Linux.yml  Build-DiscordCoreAPI-Windows.yml  Build-DiscordCoreAPI.yml  Build-Documentation.yml  CLANG-Ubuntu.yml  CLANG_16-MacOS.yml  CLANG_17 - MacOS.yml  CLANG_17.yml  CLANG_18-Ubuntu.yml  Construct-Vcpkg-Info.yml  DeleteRuns.yml  Documentation.yml  GCC-MacOS.yml  GCC_12-Ubuntu.yml  GCC_12.yml  GCC_13-MacOS.yml  MSVC-Windows-Binaries.yml  MSVC-Windows.yml  MSVC_2022-Windows.yml  MSVC_2022.yml  Release.yml  config.yml  main.yml
BuildTools/: composer.json  make_vcpkg.php
CMake/: BuildFeatureTester.bat  BuildFeatureTester.sh  CMakeLists.txt  CollectVersion.cmake  DCADetectArchitecture.cmake  DetectArchitecture.cmake  DiscordCoreAPI-config.cmake.in  DiscordCoreAPI.cmake  DiscordCoreAPIConfig.cmake.in  FindAVX.cmake  FindCurl.cmake  FindFFMPEG.cmake  FindIntl.cmake  FindLibz.cmake  FindNlohmannJson.cmake  FindOpenSSL.cmake  FindOpus.cmake  FindSodium.cmake  VersionInfo.in  VersionResource.rc  discordcoreapi-config.cmake.in  main.cpp
CMake/Find-Scripts/: FindCURLLib.cmake  FindCurl.cmake  FindFFMPEG.cmake  FindGLIB.cmake  FindGlib.cmake  (+12 more)
Commands/: AddShopItem.hpp  AddShopRole.hpp  Balance.hpp  Blackjack.hpp  BotInfo.hpp  Buttons.hpp  Buy.hpp  CasinoStats.hpp  Clear.hpp  Coinflip.hpp  CommandList.hpp  Commands.hpp  CommandsList.hpp  Deposit.hpp  Disconnect.hpp  DisplayGuildsData.hpp  Duel.hpp  GamehouseOptions.hpp  Help.hpp  HelperFunctions.hpp  Inventory.hpp  Leaderboard.hpp  LoopAll.hpp  LoopSong.hpp  Np.hpp  Pause.hpp  Play.hpp  PlayQ.hpp  PlayRN.hpp  Queue.hpp  RegisterApplicationCommands.hpp  RegisterSlashCommands.hpp  RemoveObject.hpp  RemoveShopItem.hpp  RemoveShopRole.hpp  Rob.hpp  Roulette.hpp  SellDrugs.hpp  SetBalance.hpp  SetBorderColor.hpp  (+9 more)
Documentation/: Build Instructions.md  HelperFunctions.md  Main.cpp  Precompiled Header.md
Doxygen-Docs/: Doxyfile
Examples/: Adding a Command.md  Adding-Creating a Slash Command.md  Login.md  Running a Command.md
Executable/: CMakeLists.txt  DatabaseEntities.hpp  main.cpp
Executable/Commands/: CommandsList.hpp  HelperFunctions.hpp  PlayRN.hpp  RegisterApplicationCommands.hpp  Test.hpp
Executable/Windows-DLL/: CMakeLists.txt
Headers/: ApplicationCommandEntities.hpp  AsyncGenerator.hpp  AudioDecoder.hpp  AudioEncoder.hpp  ChannelEntities.hpp  CoRoutine.hpp  CommandController.hpp  DataParsingFunctions.hpp  DiscordCoreClient.hpp  EndpointWrappers.hpp  ErlPacker.hpp  EventEntities.hpp  EventManager.hpp  FoundationEntities 01.hpp  FoundationEntities.hpp  GuildEntities.hpp  GuildMemberEntities.hpp  GuildScheduledEventEntities.hpp  Http.hpp  Index.hpp  IndexInitial.hpp  InputEvents.hpp  InteractionEntities.hpp  JSONIfier.hpp  MessageEntities.hpp  Microsoft.Windows.UI.Xaml.Common  ReactionEntities.hpp  RoleEntities.hpp  SSLClient.hpp  SSLClients.hpp  SongAPI.hpp  SongDecoder.hpp  SongEncoder.hpp  SoundCloudAPI.hpp  StageInstanceEntities.hpp  StickerEntities.hpp  ThreadEntities.hpp  ThreadManager.hpp  ThreadPool.hpp  UserEntities.hpp  (+4 more)
Include/: ApplicationCommandEntities.hpp  AudioDecoder.hpp  AudioEncoder.hpp  ChannelEntities.hpp  CoRoutine.hpp  CommandController.hpp  DataParsingFunctions.hpp  DiscordCoreClient.hpp  ErlPacker.hpp  EventEntities.hpp  EventManager.hpp  FoundationEntities.hpp  GuildEntities.hpp  GuildMemberEntities.hpp  GuildScheduledEventEntities.hpp  Http.hpp  Index.hpp  InputEvents.hpp  InteractionEntities.hpp  JSONIfier.hpp  MessageEntities.hpp  ReactionEntities.hpp  RoleEntities.hpp  SSLClients.hpp  SongAPI.hpp  SoundCloudAPI.hpp  StageInstanceEntities.hpp  StickerEntities.hpp  ThreadEntities.hpp  ThreadPool.hpp  UserEntities.hpp  VoiceConnection.hpp  WebHookEntities.hpp  WebSocketEntities.hpp  YouTubeAPI.hpp
Input Files/: DiscordCoreAPI-DLLTargetsDebug-debug.cmake  DiscordCoreAPI-DLLTargetsDebug-release.cmake  DiscordCoreAPI-DLLTargetsDebug.cmake  DiscordCoreAPI-DLLTargetsRelease-debug.cmake  DiscordCoreAPI-DLLTargetsRelease-release.cmake  DiscordCoreAPI-DLLTargetsRelease.cmake
Output Files/: DiscordCoreAPI-Bot.ilk
Source/: ApplicationCommandEntities.cpp  AudioDecoder.cpp  AudioEncoder.cpp  AutoModerationEntities.cpp  ChannelEntities.cpp  CoRoutine.cpp  CommandController.cpp  DataParsingFunctions.cpp  Demuxers.cpp  DiscordCoreClient.cpp  DllMain.cpp  ErlPacker.cpp  ErlParser.cpp  Etf.cpp  EventManager.cpp  FoundationEntities.cpp  GuildEntities.cpp  GuildMemberEntities.cpp  GuildScheduledEventEntities.cpp  Http.cpp  Https.cpp  HttpsClient.cpp  InputEvents.cpp  InteractionEntities.cpp  JSONIfier.cpp  MessageEntities.cpp  ReactionEntities.cpp  RoleEntities.cpp  SSLClients.cpp  SongAPI.cpp  SoundCloudAPI.cpp  StageInstanceEntities.cpp  StickerEntities.cpp  TCPConnection.cpp  ThreadEntities.cpp  ThreadPool.cpp  UDPConnection.cpp  UserEntities.cpp  Utilities.cpp  VoiceConnection.cpp  (+4 more)
Tests/: CMakeLists.txt  ReadMe.md  main.cpp
Tests/Commands/: BotInfo.hpp
(+991 files in other folders)
